--- a/sass/components/contact.scss
+++ b/sass/components/contact.scss
@@ -20,7 +20,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            z-index: 1;
             p{
                 font-size: 1.5em;
                 font-weight: 500;
