--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -14,6 +14,7 @@ header{
             width: 50px;
             height: auto;
             filter: invert(15%) sepia(3%) saturate(27%) hue-rotate(37deg) brightness(96%) contrast(105%);
+            z-index: 1;
         }
         .headerList{
             padding-right: 15px;
